heimdall/heimdall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: heimdall
spec:
  rules:
    - host: heimdall.danber.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall  # use the name of the LoadBalancer service
                port:
                  number: 80
